clusters/common/apps/cdn/apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    protocol: TCP
    targetPort: 8096
  type: ClusterIP
